# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
note/: OpenGL_Learning_Guide.md  OpenGL_Quick_Reference.md
pratice/example/: CMakeLists.txt
pratice/example/01_mesh/: CMakeLists.txt
pratice/example/02_light/: CMakeLists.txt  lighting_maps_demo.cc  phong_lighting_demo.cc
pratice/src/: CMakeLists.txt  Camera.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cc  mesh.h
pratice/src/glsl/: simple.vs
pratice/src/imgui/: README.md  camera_control_demo.cc  example_01.cc
src/01_Hello_Window/: CMakeLists.txt  hello_world.cc
src/02_Hello_Triangle/: CMakeLists.txt
src/03_Shaders/: CMakeLists.txt
src/04_Textures/: CMakeLists.txt  main.cc  textures.cc
src/05_Transformations/: CMakeLists.txt  main.cc  transformations.cc
src/06_Coordinate_Systems/: CMakeLists.txt  coordinate_systems.cc
src/07_Camera/: CMakeLists.txt  camera.cc
src/pratice/: CMakeLists.txt  build_and_run_light_casters.sh  build_and_run_lighting_maps.sh  build_and_run_multiple_lights.sh
src/pratice/include/: buffer_manager.h  shader_proxy.h
src/pratice/src/: CMakeLists.txt  Camera.cpp  Camera.h  MeshFactory.cc  MeshFactory.h  Shader.cpp  Shader.h  Shader_improved.cpp  Texture.h  example.cc  light_casters_demo.cc  lighting_demo.cc  main.cc  mesh.cc  mesh.h  multiple_lights_demo.cc  shader_proxy.cc
src/pratice/src/glsl/: color.vs  simple.fs  texture.fs  texture.vs
src/pratice/src/imgui/: CMakeLists.txt  camera_control_demo.cc  enhanced_camera_demo.cc
